# projeto-final-eng-dados

./: .env.example  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
arquitetura/: index.html
contribuindo/: index.html
dashboard/: index.html
docker/: docker-compose.yml
docker/airflow/: Dockerfile  docker-compose.yml
docker/jupyter/: Dockerfile
docker/postgres/: docker-compose.yml  init_extra_dbs.sql
docs/: arquitetura.md  contribuindo.md  dashboard.md  gold.md  index.md  ingestao.md  origem.md  referencias.md  transformacao.md
docs/stylesheets/: extra.css
gold/: index.html
infra/postgres/: docker-compose.yml
ingestao/: index.html
notebooks/: hello_world.ipynb  silver_to_gold.ipynb
notebooks/.ipynb_checkpoints/: hello_world-checkpoint.ipynb
origem/: index.html
referencias/: index.html
search/: search_index.json
src/01_origem/: generate_data.py  schema.sql
src/02_ingestao/: README.md  ingestao_postgres.py  minio_client.py
src/03_transformacao/: README.md  bronze_to_silver.py  landing_to_bronze.py
src/04_modelagem_gold/: README.md  consultas_analiticas.sql  gold_agregados.py  silver_to_gold.py
src/05_orquestracao/: README.md  gold_pipeline_dag.py  pipeline_medallion_dag.py
src/06_dashboard/: gold_to_postgres.py  kpis_queries.sql  metabase_setup.py
src/database/: generate_data.py  schema.sql
src/utils/: spark_config.py
transformacao/: index.html
